--- a/templates/index.html
+++ b/templates/index.html
@@ -9,17 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/style.css">
-    <title>Login</title>
+    <h1>Login</h1>
+    
 </head>
 <body>
+   <a href="register"><button class = "btn btn-primary">Register</button></a>
    <h1>Video Login</h1>
    <form method="POST" accept-charset="utf-8" autocomplete="off">
       <div id="container">
          <video width="1280" height="720" id="video" autoplay></video>
       </div>
       {{ form.hidden_tag() }}
-      {{ form.email.label }} {{ form.email() }} {% for error in form.email.errors %}{{ error }}{% endfor %}<br>
-      {{ form.url.label }} {{ form.url() }} {% for error in form.url.errors %}{{ error }}{% endfor %}<br>
+      {{ form.email.label }} {{ form.email() }} {% for error in form.email.errors %}{{ error }}{% endfor %}
+      <br>
+      {{ form.url.label }} {{ form.url() }} {% for error in form.url.errors %}{{ error }}{% endfor %}
+      <br>
       {{ form.submit() }}
    </form>
    <canvas id="myCanvas" width="320" height="240" hidden></canvas>
